--- a/src/Component/Meals/MealItem/MealItem.module.css
+++ b/src/Component/Meals/MealItem/MealItem.module.css
@@ -4,6 +4,7 @@
     margin: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid #ccc;
+    background-color: aquamarine;
   }
 
   .meal h3 {
@@ -19,4 +20,7 @@
     font-weight: bold;
     color: #ad5502;
     font-size: 1.25rem;
+  }
+  .button{
+  
   }
